# pytest-aitest

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FASTMCP_MIGRATION_SUMMARY.md  README.md  mkdocs.yml  pyproject.toml  test_wrapper.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  hero-tests.yml  pages.yml  release.yml
docs/: BingSiteAuth.xml  DESIGN.md  README.md  RESTRUCTURE_PLAN.md  api-reference.md  assertions.md  cli-server.md  concepts.md  configuration.md  index.md  mcp-server.md  reporting.md  robots.txt  sessions.md  skills.md  test-harnesses.md  testing.md
docs/contributing/: .meta.yml  architecture.md  index.md  releasing.md  report-structure.md
docs/demo/: hero-report.html  hero-report.json  hero-report.md
docs/explanation/: .meta.yml  agents.md  ai-analysis.md  ai-reports.md  architecture.md  comparison-modes.md  index.md  report-structure.md  skills-vs-prompts.md  tdd-for-ai.md  testing-philosophy.md
docs/getting-started/: .meta.yml  ab-testing-servers.md  comparing.md  index.md  iterations.md  matrix.md  sessions.md  skills.md  system-prompts.md
docs/how-to/: .meta.yml  complete-example.md  fixture-testing.md  generate-reports.md  index.md  mcp-server-implementation.md  test-cli-tools.md  test-copilot-agent.md  test-mcp-servers.md  visual-testing.md
docs/reference/: .meta.yml  api.md  assertions.md  cli.md  configuration.md  index.md  result.md  test-harnesses.md
docs/reports/: 01_basic_usage.html  01_single_agent.html  01_single_agent.md  02_model_comparison.html  02_multi_agent.html  02_multi_agent.md  03_multi_agent_sessions.html  03_multi_agent_sessions.md  03_prompt_comparison.html  04_agent_selector.html  04_agent_selector.md  04_matrix.html  05_prompt_comparison.html  05_prompt_comparison.md  05_sessions.html  06_model_prompt_matrix.html  06_model_prompt_matrix.md  06_with_ai_summary.html  07_skill_improvement.html  07_skill_improvement.md  07_with_skipped.html  08_cli_server.html  08_cli_server.md  08_matrix_full.html  09_ab_servers.html  09_ab_servers.md  10_dimension_detection.html  10_dimension_detection.md  README.md
examples/: README.md
schema/: README.md  report.schema.json
scripts/: build_css.py  generate_fixture_html.py  generate_fixtures.py  generate_models.py
src/pytest_aitest/: __init__.py  cli.py  hooks.py  plugin.py  reporting.py  schema.py
tests/fixtures/: conftest.py  generate_scenarios.py  scenario_01_single_agent.py  scenario_02_multi_agent.py  scenario_03_sessions.py  scenario_04_agent_selector.py  scenario_05_prompt_comparison.py  scenario_06_model_prompt_matrix.py  scenario_07_skill_improvement.py  scenario_08_cli_server.py  scenario_09_ab_servers.py  scenario_10_dimension_detection.py
tests/integration/: README.md  conftest.py  test_ab_servers.py  test_ai_summary.py  test_basic_usage.py  test_cli_server.py  test_copilot_server.py  test_dimension_detection.py  test_iterations.py  test_matrix.py  test_model_benchmark.py  test_prompt_arena.py  test_sessions.py  test_skill_improvement.py  test_skills.py  test_todo_transports.py  test_transport.py
tests/showcase/: __init__.py  conftest.py  test_hero.py
tests/unit/: test_adaptive_flags.py  test_agent.py  test_aggregator.py  test_clarification.py  test_cli.py  test_cli_server_process.py  test_hooks.py  (+16 more)
(+115 files in other folders)
